<resources>
    <string name="app_name">WorkoutEngineer</string>
    <string name="app_name_display">Workout Engineer</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="button_create_workout">Create workout</string>
    <string name="button_edit_workout">Edit Workout</string>
    <string name="button_start_workout">Start Workout</string>
    <string name="create_workout_button">Create workout</string>
    <string name="table_header_exercise">Exercise</string>
    <string name="table_header_sets">Sets</string>
    <string name="table_headers_rep">Reps</string>
    <string name="table_headers_weight">Weight</string>
    <string name="enter_the_name_of_your_workout_dialog">Enter the name of your workout</string>
    <string name="done_button_text">Done</string>
    <string name="workout_name">Workout name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_no_workouts_created">Oops...</string>
    <string name="no_workouts_dialog_error_message">It looks like you have not created any workout yet...</string>
    <string name="go_back_button">Go back</string>
    <string name="progress_title">Progress</string>
    <string name="congratulation_title">Well done!</string>
    <string name="congratulation_text">You nailed that workout!</string>
    <string name="finish_workout_button">Finish</string>
    <string name="complete_edit_button">Complete Edit</string>
    <string name="delete_workout_menu_item">Delete workout</string>
    <string name="delete_workout_text">Are you sure you want to delete this workout?</string>
    <string name="button_yes">Yes</string>
    <string name="no_button">No</string>
    <string name="action_not_performed">Action not performed</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_exercises_error">You cannot create a workout without exercises!</string>
    <string name="all">All</string>
    <string name="arms">Arms</string>
    <string name="legs">Legs</string>
    <string name="core">Core</string>
    <string name="back">Back</string>
    <string name="custom_exercises">Custom</string>
    <string name="about_message">App made by William Meroz-Moreau</string>
    <string name="ok_button">OK</string>
    <string name="select_workout">Select Workout</string>
    <string name="workout_title">Workout</string>
    <string name="edit_workout_title">Edit Workout</string>
    <string name="select_exercises_title">Select Exercises</string>
    <string name="create_workout_title">Create Workout</string>

    <!-- Settings strings -->
    <string name="theme_title">Theme</string>
    <string name="dark_mode_on">If you need more light in your life</string>
    <string name="dark_mode_off">Perfect choice for night owls</string>
    <string name="dark_mode_title">Dark Mode</string>

    <string name="metric_title">Metric</string>
    <string name="list_preference_title">Metric System</string>
    <string name="create_new_workout_button">Create new workout button</string>
    <string name="add_new_exercise_title">Add new exercise</string>
    <string name="add_a_new_exercise_title">Add a new exercise</string>
    <string name="exercise_name_hint_et">Exercise name</string>
    <string name="exercise_description_hint">Exercise description</string>
    <string name="create_exercise_button_text">Create exercise</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="see_api_menu_item">See API</string>
</resources>