<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.AddExerciseActivity">

    <TextView
        android:id="@+id/create_exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/add_a_new_exercise_title"
        android:textSize="30sp"/>
    
    <EditText
        android:id="@+id/new_exercise_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_exercise_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:hint="@string/exercise_name_hint_et" />
    
    <EditText
        android:id="@+id/new_exercise_desc_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_exercise_name_et"
        android:layout_marginTop="30dp"
        android:hint="@string/exercise_description_hint" />

    <Button
        android:id="@+id/create_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/create_exercise_button_text"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_exercise_desc_et" />

    <Button
        android:id="@+id/create_exercise_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/cancel_button_text"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintLeft_toRightOf="@id/create_exercise_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_exercise_desc_et" />

</androidx.constraintlayout.widget.ConstraintLayout>